# mcp-server-azure-ai-search-python-preview

./: .gitignore  README.md  __init__.py  __main__.py  main.py  pyproject.toml
data_access_objects/: __init__.py  dao.py
mcp_server_azure_ai_search_preview/: __init__.py  __main__.py
mcp_server_azure_ai_search_preview/data_access_objects/: __init__.py  dao.py  models.py
mcp_server_azure_ai_search_preview/shared/: __init__.py  mcp_service.py
sample-dataset/: README.md
sample-dataset/contoso-grocery/customers/: customers.json
sample-dataset/contoso-grocery/departments/: appliance.json  cleaning.json  dairy.json  deli.json  meat.json  pharmacy.json  produce.json  seafood.json
sample-dataset/contoso-grocery/net_sales/: dairy_net_sales.json
sample-dataset/contoso-grocery/product_inventory/: dairy_inventory.json
sample-dataset/contoso-grocery/product_pricing/: appliance_pricing.json  dairy_pricing.json  deli_pricing.json  meat_pricing.json  pharmacy_pricing.json  produce_pricing.json  seafood_pricing.json
sample-dataset/datasource-definitions/: azure-blob-departments.json  azure-cosmosdb-departments.json
sample-dataset/index-definitions/: departments-indexer.json
sample-dataset/skillset-definitions/: departments-french-translations.json  departments-portuguese-translations.json  departments-spanish-translations.json
shared/: mcp_service.py
terraform/: README.md  generate_environment_variables_file.sh  main.tf
tests/: README.md  __init__.py  test_ai_search_mcp.py  test_models_and_conversions.py  test_search_client.py  test_search_index.py  test_search_indexer.py  test_searchi_index.py
(+8 files in other folders)
